Improved Mobs 1.6.7
================
- Nerfed shield usage from mobs
- Fixed offhand chance
- Nerfed shield default weight
- Fix nullpointer crash with wrong registry name in equipment.json
- Dont run item ai for primitive mobs skeleton warrior

Improved Mobs 1.6.6
================
- Fix "minecraft:air" not being valid for equipment
- Fix default entity list
- Added a difficulty increase delay for the start of a world

Improved Mobs 1.6.5
================
- Changed potions to use Potion#isBadEffect instead of checking only for instant damage
- Fix auto target only working for one pair
- Difficulty will not increase without online players anymore

Improved Mobs 1.6.4
================
- Changed it so armor only equips if the slot is empty (to prevent item overrides)

Improved Mobs 1.6.3
================
- Fix attribute nullpointer crash (#28)
- Added CoroUtil repairing block support. Broken blocks by mobs now regen after a while (configurable time)
- Fixed entities using wrong hand to break blocks
- Changed pathfinding ai: Mobs now prioritize paths where they dont have to break blocks. 
	Fixes problems where e.g. dirt is added to break list and mobs digging through the land
- Added several config options: Difficulty Break AI, Difficulty Steal AI, Break Tiles, Stealer Chance

Improved Mobs 1.6.2
================
- Fix ridden guardian boats crashing with non EntityMob 

Improved Mobs 1.6.1
================
- Fix empty list in equipment.json crash (#25)
- Made it so wrong item names errors instead of crashing
- Fix unneccessary casts in command

Improved Mobs 1.6.0
================
- Updated the command. Now possible to reload equipment.json ingame.
- Added config for difficulty text scaling
- Added nbt support for equipment. Syntax is: <item>{NBT}:weight
- Added config to round hp values
- Complete overhaul of the mob black/whitelists. Back up your configs!

Improved Mobs 1.5.3
================